fix: make work on iOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ body, html {
 h1,h2,legend,
 md-toolbar .title {
     font-family: 'Audiowide', Roboto, 'Helvetica Neue', sans-serif;
-    letter-spacing: 1px;
+    // letter-spacing: 1px;
 }
 
 a {
